src/src/objects/LMS_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>LMS_Employee__c</fullName>
        <label>LMS_Employee</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipName>LMS_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LMS_Hours_worked__c</fullName>
        <formula>(LMS_Out_Time__c  -  LMS_IN_Time__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_IN_Time__c</fullName>
        <label>IN Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LMS_Out_Time__c</fullName>
        <label>Out Time</label>
        <type>DateTime</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Attendance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>